2008-06-01 John Barnette <jbarnette@rubyforge.org>

	* lib/rubygems.rb: Add Gem.available?(gem, *specs) for easy availability
	checks at runtime.

2008-05-31  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/dependency_command.rb:  Delay fetching specs
	until needed.  Reverse dependencies can no longer be calculated for
	remote sources.  Add backwards compatibility.
	* lib/rubygems/commands/fetch_command.rb:  Add backwards
	compatibility.

2008-05-30  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/local_remote_options.rb:  --sources option should not
	add URIs to Gem.sources.
	* lib/rubygems/spec_fetcher.rb:  Add #warn_legacy to help handling
	legacy sources.
	* luby/rubygems/commands/query_command.rb:  Add backwards
	compatibility with legacy sources.

2008-05-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Add #uri to
	Gem::RemoteFetcher::FetchError.
	* lib/rubygems/user_interaction.rb:  Improve RDoc slightly.
	* lib/rubygems/spec_fetcher.rb:  Introduce backwards compatibility for
	legacy (pre 1.2) repositories
	* lib/rubygems/commands/sources_command.rb:  Backwards compatibility
	and restoration of --update.
	* lib/rubygems/specification.rb:  Ensure nil-typed dependencies become
	runtime dependencies.

2008-05-27  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/spec_fetcher.rb:  Switch #fetch, #find_matching to be
	compatible with Gem::SourceInfoCache#search_with_source.  Add caching
	for .gemspec files.
	* lib/rubygems/dependency_installer.rb:  Switch to SpecFetcher.
	* lib/rubygems/source_index.rb:  Switch #outdated to use SpecFetcher.
	* lib/rubygems/commands/dependency_command.rb:  Switch to SpecFetcher.
	* lib/rubygems/commands/outdated_command.rb:  Switch to SpecFetcher.
	* lib/rubygems/commands/query_command.rb:  Switch to SpecFetcher.
	* lib/rubygems/commands/sources_command.rb:  Switch to SpecFetcher.
	* lib/rubygems/commands/update_command.rb:  Switch to SpecFetcher.